src/objects/ContactPositions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>List of contact positions codes (use name field to store the codes) to be imported by default when an account is enriched or created from Postnord Customer Master</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The Name field contains the Contact Person code stored in PNCM. The description field should explain what the code represents, ex. 1234, Chief Executive Officer</description>
        <inlineHelpText>The Name field contains the Contact Person code stored in PNCM. The description field should explain what the code represents, ex. 1234, Chief Executive Officer</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Positions</label>
</CustomObject>